--- a/package.json
+++ b/package.json
@@ -11,19 +11,26 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@smastrom/react-rating": "^1.3.2",
     "@supabase/supabase-js": "^2.38.1",
     "@tanstack/react-query": "^5.0.0",
     "@tanstack/react-query-devtools": "^5.0.0",
+    "antd": "^5.10.2",
+    "framer-motion": "^10.16.4",
     "nanoid": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.3",
-    "react-spinners": "^0.13.8"
+    "react-simple-star-rating": "^5.1.7",
+    "react-spinners": "^0.13.8",
+    "react-stars": "^2.2.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-stars": "^2.2.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
