--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nanoid": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.3",
