--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.0.0",
     "antd": "^5.10.2",
     "framer-motion": "^10.16.4",
+    "leaflet": "^1.9.4",
     "nanoid": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,6 +30,7 @@
     "react-stars": "^2.2.5"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-stars": "^2.2.3",
