--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-leaflet": "^4.2.1",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.3",
     "react-simple-star-rating": "^5.1.7",
